add start styles css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <section>
+        <div class="slider">
+            <div class="slider slide-1">
+                <h1>Helloo, Slide-1</h1>
+            </div>
+            <div class="slider slide-2">
+                <h1>Helloo, Slide-2</h1>
+            </div>
+            <div class="slider slide-3">
+                <h1>Helloo, Slide-3</h1>
+            </div>
+            <div class="slider slide-4">
+                <h1>Helloo, Slide-4</h1>
+            </div>
+        </div>
+    </section>
+
+
     <script src="js/main.js"></script>
 </body>
 </html>
