add images for slider

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <section>
         <div class="slider">
-            <div class="slider slide-1">
-                <h1>Helloo, Slide-1</h1>
+            <div class="slide slide-1">
+                <h1>Hello, Slide-1</h1>
             </div>
-            <div class="slider slide-2">
-                <h1>Helloo, Slide-2</h1>
+            <div class="slide slide-2">
+                <h1>Hello, Slide-2</h1>
             </div>
-            <div class="slider slide-3">
-                <h1>Helloo, Slide-3</h1>
+            <div class="slide slide-3">
+                <h1>Hello, Slide-3</h1>
             </div>
-            <div class="slider slide-4">
-                <h1>Helloo, Slide-4</h1>
+            <div class="slide slide-4">
+                <h1>Hello, Slide-4</h1>
             </div>
         </div>
     </section>
