add function Next ofr slide

--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
 <body>
     <section>
         <div class="slider">
-            <div class="slide slide-1">
+            <div class="slide slide-1 active">
                 <h1>Hello, Slide-1</h1>
             </div>
             <div class="slide slide-2">
                 <h1>Hello, Slide-2</h1>
             </div>
-            <div class="slide slide-3">
+            <div class="slide slide-3 ">
                 <h1>Hello, Slide-3</h1>
             </div>
-            <div class="slide slide-4">
+            <div class="slide slide-4 ">
                 <h1>Hello, Slide-4</h1>
             </div>
+        </div>
+        <div class="buttons">
+            <div class="next"><ion-icon name="chevron-forward-outline"></ion-icon></div>
+            <div class="prev"><ion-icon name="chevron-back-outline"></ion-icon></div>
         </div>
     </section>
 
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 </html>
