--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                 <h1>Hello, Slide-4</h1>
             </div>
         </div>
+
         <div class="buttons">
             <div class="next"><ion-icon name="chevron-forward-outline"></ion-icon></div>
             <div class="prev"><ion-icon name="chevron-back-outline"></ion-icon></div>
         </div>
+
+        <div class="dots"></div>
     </section>
 
 
